Add character counter to count if the tweet statement has surpassed the 140 character limit. The count then turns red to indicate that the limit was reached

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Meta Information -->
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Tweeter - Home Page</title>
 
   <!-- External CSS -->
@@ -38,13 +38,18 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+
+  <!-- Composer Character Counter JS -->
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
 </head>
 
 <body>
   <!-- Top nav bar (fixed) -->
   <nav>
     <span class="logo">Tweeter</span>
-    <p>Write a new tweet! <i class="fa-solid fa-angles-down"></i></p>
+    <p>Write a new tweet! <i class="fa-solid fa-angles-down" id="double-arrow"></i></p>
+
   </nav>
 
   <header>
@@ -58,9 +63,10 @@
   <main class="container">
     <section class="new-tweet">
       <form method="POST" action="/tweets/">
-        <label for="tweet-text">What are you humming about?</label>
-        <textarea name="text" id="tweet-text"></textarea>
         <div>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        </div>
+        <div class="tweet-character">
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
