--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
   </nav>
 
-  <header>
+  <header class="header">
     <div>
       <img src="/images/profile-hex.png">
     </div>
@@ -72,6 +72,29 @@
         </div>
       </form>
     </section>
+
+    <section class="tweet-container">
+      <article class="tweet">
+        <header>
+          <div>
+            <img width="80px" src="/images/sir-isaac-newton.png">
+            <span>Newton</span>
+          </div>
+          <p>@SirIsaac</p>
+        </header>
+        <p>If I have seen further it is by standing on the shoulder of the giants</p>
+        <footer>
+          <p>10 days ago</p>
+          <div>
+            <i class="fa-solid fa-flag icons"></i>
+            <i class="fa-solid fa-retweet icons"></i>
+            <i class="fa-solid fa-heart icons"></i>
+          </div>
+        </footer>
+      </article>
+
+    </section>
+
   </main>
 </body>
 
