Implement the tweets dynamically instead of hardcording it on the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -73,26 +73,7 @@
       </form>
     </section>
 
-    <section class="tweet-container">
-      <article class="tweet">
-        <header>
-          <div>
-            <img width="80px" src="/images/sir-isaac-newton.png">
-            <span>Newton</span>
-          </div>
-          <p>@SirIsaac</p>
-        </header>
-        <p>If I have seen further it is by standing on the shoulder of the giants</p>
-        <footer>
-          <p>10 days ago</p>
-          <div>
-            <i class="fa-solid fa-flag icons"></i>
-            <i class="fa-solid fa-retweet icons"></i>
-            <i class="fa-solid fa-heart icons"></i>
-          </div>
-        </footer>
-      </article>
-
+    <section id="tweets-container">
     </section>
 
   </main>
