Implement JQuery call to replace the alert call to show error message when character limit is exceeded

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
   <main class="container">
     <section class="new-tweet">
       <form id="new-tweet-form" action="">
+        <div class="error" style="display: none;">
+          Character limit exceeded!
+        </div>
         <div>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         </div>
