Add media query for desktop screens

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Meta Information -->
   <meta charset="utf-8" />
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
   <title>Tweeter - Home Page</title>
 
@@ -53,8 +53,9 @@
     <p>Write a new tweet! <i class="fa-solid fa-angles-down" id="double-arrow"></i></p>
   </nav>
 
+ <div class="body-container">
   <header class="header">
-    <div>
+    <div id="img">
       <img src="/images/profile-hex.png">
     </div>
     <h2>Snowy Pea</h2>
@@ -76,10 +77,9 @@
         </div>
       </form>
     </section>
-
     <section id="tweets-container"></section>
-
   </main>
+ </div>
 </body>
 
 </html>
