Handle error when a user sends an empty tweet

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,9 @@
           <div class="error" style="display: none;">
             Character limit exceeded!
           </div>
+          <div id="empty-error" style="display: none;">
+            Invalid tweet! Please tell us what you're humming about.
+          </div>
           <div>
             <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           </div>
